✨ feat(monitor): enhance environment configuration and logging
- Add `.env` support with `python-dotenv` for loading environment variables.
- Introduce `loguru` for improved logging with rotation and levels.
- Optimize SQLite transactions using `with` blocks for better resource handling.
- Refactor file hashing and Docker utility functions for modularity.
- Update `pyproject.toml` and `poetry.lock` to include new dependencies.
- Extend `.gitignore` to ignore `.env` files.

This refactor improves configurability, logging clarity, and code maintainability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,13 @@ description = "File changes monitor"
 authors = ["Sammy Barasa"]
 license = "MIT"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
 watchdog = "^6.0.0"
+python-dotenv = "^1.1.0"
+loguru = "^0.7.3"
 
 
 [build-system]
